# JniBenchmarking

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Calculator.h
app/src/main/java/com/eyeo/ctu/: Calculator.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
benchmarking/: build.gradle
benchmarking/src/androidTest/: AndroidManifest.xml
benchmarking/src/androidTest/java/com/eyeo/ctu/: CalculatorBenchmark.kt  EngineBenchmark.kt  JnaBenchmark.kt  JniBenchmark.kt  RpcBenchmark.kt
benchmarking/src/main/: AndroidManifest.xml
calculator/: CMakeLists.txt  build.gradle
calculator-benchmarking/: build.gradle
calculator-benchmarking/src/androidTest/: AndroidManifest.xml
calculator-benchmarking/src/androidTest/java/com/eyeo/ctu/: CalculatorBenchmark.kt
calculator-benchmarking/src/main/: AndroidManifest.xml
calculator/src/androidTest/java/com/eyeo/ctu/: CalculatorTest.kt
calculator/src/main/: AndroidManifest.xml
calculator/src/main/cpp/: Calculator.cpp  libcalculator.cpp
cpp_shared/include/: Utils.h
cpp_shared/src/: Utils.cpp
engine/: CMakeLists.txt  build.gradle
engine-flatbuffers/: CMakeLists.txt  README  build.gradle  log.txt  proguard-rules.pro
engine-flatbuffers-benchmark/: build.gradle
engine-flatbuffers-benchmark/src/androidTest/: AndroidManifest.xml
engine-flatbuffers-benchmark/src/androidTest/java/com/eyeo/ctu/engine/fb/: EngineBenchmark.kt
engine-flatbuffers-benchmark/src/main/: AndroidManifest.xml
engine-flatbuffers/src/androidTest/java/com/eyeo/ctu/: EngineTest.kt
engine-flatbuffers/src/androidTest/java/com/eyeo/ctu/engine/fb/: EngineTest.kt
engine-flatbuffers/src/main/: AndroidManifest.xml
engine-flatbuffers/src/main/cpp/: libengine-fb.cpp  libengine.cpp
engine-flatbuffers/src/main/flatbuffers/: matches_common.fbs  matches_request.fbs  matches_response.fbs
engine-flatbuffers/src/main/java/com/eyeo/ctu/: Engine.kt
engine-flatbuffers/src/main/java/com/eyeo/ctu/engine/fb/: DirectFlatBufferBuilder.kt  Engine.kt
engine-grpc/: CMakeLists.txt  build.gradle
engine-grpc-benchmark/: build.gradle
engine-grpc-benchmark/src/main/: AndroidManifest.xml
engine-grpc/src/androidTest/java/com/eyeo/ctu/engine/grpc/: AndroidGrpcTest.kt
engine-grpc/src/main/: AndroidManifest.xml
engine-grpc/src/main/cpp/: libengine-grpc.cpp
engine-grpc/src/main/java/com/eyeo/ctu/engine/grpc/: Rpc.kt
engine-grpc/src/main/proto_lite/: matches.proto
engine-jni/: CMakeLists.txt
engine-jni-benchmark/: build.gradle
engine-jni-benchmark/src/androidTest/: AndroidManifest.xml
engine-jni-benchmark/src/androidTest/java/com/eyeo/ctu/engine/jni/: EngineBenchmark.kt
engine-jni-benchmark/src/main/: AndroidManifest.xml
engine-jni/src/androidTest/java/com/eyeo/ctu/engine/jni/: EngineTest.kt
engine-jni/src/main/: AndroidManifest.xml
engine-jni/src/main/cpp/: Engine.cpp  Utils.h  libengine-jni.cpp
engine-jni/src/main/java/com/eyeo/ctu/engine/jni/: Engine.kt
engine-protocolbuffers/: CMakeLists.txt  build.gradle
engine-protocolbuffers-benchmark/: build.gradle
engine-protocolbuffers-benchmark/src/androidTest/: AndroidManifest.xml
engine-protocolbuffers-benchmark/src/main/: AndroidManifest.xml
engine-protocolbuffers/src/androidTest/java/com/eyeo/ctu/engine/pb/: EngineTest.kt
engine-protocolbuffers/src/main/: AndroidManifest.xml
engine-protocolbuffers/src/main/cpp/: Engine.cpp  libengine-pb.cpp
engine-protocolbuffers/src/main/java/com/eyeo/ctu/engine/pb/: DirectByteBufferOutputStream.kt  Engine.kt
engine-protocolbuffers/src/main/proto_lite/: matches.proto
engine-protocolbuffers/src/main/proto_wire/: matches.proto
engine/src/androidTest/java/com/eyeo/ctu/: EngineTest.kt
engine/src/main/: AndroidManifest.xml
engine/src/main/cpp/: Engine.cpp  Engine.h  Utils.cpp  Utils.h  libengine.cpp
engine/src/main/java/com/eyeo/ctu/: DirectByteBufferOutputStream.kt  Engine.kt
engine/src/main/proto/: matches.proto
engine/src/main/proto_lite/: matches.proto
engine/src/main/proto_wire/: matches.proto
grpc/: CMakeLists.txt
grpc-benchmark/: build.gradle
grpc-benchmark/src/androidTest/: AndroidManifest.xml
grpc/src/main/cpp/: libengine-grpc.cpp
grpc/src/main/proto_wire/: matches.proto
jna/: CMakeLists.txt
jna-benchmark/: build.gradle
jna-benchmark/src/androidTest/: AndroidManifest.xml
jna-benchmark/src/androidTest/java/com/eyeo/ctu/jna/: JnaBenchmark.kt
jna-benchmark/src/main/: AndroidManifest.xml
jna/src/androidTest/java/com/eyeo/ctu/jna/: JnaTest.kt
jna/src/main/: AndroidManifest.xml
jna/src/main/cpp/: libmeasurement-jna.cpp
jna/src/main/java/com/eyeo/ctu/jna/: Measurement.kt
jni/: CMakeLists.txt  build.gradle
jni-benchmark/: build.gradle
jni-benchmark/src/androidTest/: AndroidManifest.xml
jni-benchmark/src/androidTest/java/com/eyeo/ctu/jni/: PureJniBenchmark.kt
jni-benchmark/src/main/: AndroidManifest.xml
jni/src/androidTest/java/com/eyeo/ctu/jni/: PureJniTest.kt
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: Utils.h  libmeasurement-jni.cpp
jni/src/main/java/com/eyeo/ctu/jni/: Measurement.kt
jvm-benchmark/: build.gradle
jvm-benchmark/src/androidTest/: AndroidManifest.xml
jvm-benchmark/src/main/: AndroidManifest.xml
lib/: CMakeLists.txt  build.gradle  proguard-rules.pro
lib/src/androidTest/java/com/eyeo/ctu/: JnaLibraryTest.kt  LibraryTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: Utils.cpp  libbenchmark.cpp
lib/src/main/java/com/eyeo/ctu/: JnaLibrary.kt  Library.kt
rpc/: CMakeLists.txt  build.gradle
rpc/src/androidTest/java/com/eyeo/ctu/rpc/: AndroidRpcTest.kt
rpc/src/main/: AndroidManifest.xml
rpc/src/main/cpp/: librpc.cpp
rpc/src/main/java/com/eyeo/ctu/rpc/: Rpc.kt  UdsGrpc.kt
rpc/src/main/proto_lite/: matches.proto
rpc/src/main/proto_wire/: matches.proto
rpc/src/test/java/com/eyeo/ctu/rpc/: JdkRpcLiteTest.kt  JdkRpcTest.kt  RpcTest.kt
(+7 files in other folders)
